 * Changed a handful of methods to return `String` rather than `CStr`. The original intention was
   to avoid unecessary conversion, but users most likely would prefer `Strings`s, and there should
   definitely not be a problem with "lossy" utf8 conversion in these cases.
 * stream: get_underflow_index: return unsigned
 * Hid string printing length constants, only used interally

 [pulse-simple-binding]

 * Tidied up error code handling, per above
 * Improved time handling, per above

Changes between 1.0.5 and 1.1.0:
---------------

 [pulse-binding]

 * Privatised the `from_raw` method of various objects, having become aware of the more granular
   `pub(crate)` type scope limiting syntax. Note, `from_raw_weak` methods designed for use in
   callbacks are still available.
 * Also privatised inner pointer attributes of structs in a few places on the same basis.
 * Privatised utils::unwrap_optional_callback function
 * Privatised timer event get_ptr method
 * As described below, a number of C function declarations in the sys crates now take certain object
   pointers immutably. A small number of functions in the binding have been similarly updated.
 * Promoted `self` reference to mutable for various methods across context, mainloops, streams,
   proplist and operation objects. Although our objects in these cases can be used immutably (no
   change in the wrapped pointer), we should reflect mutability needs of the operation being
   performed on the underlying C objects.

 [pulse-simple-binding]

 * Privatised SimpleInternal

 [pulse-sys]

 * Various functions have been changed to take immutable const pointers.
   There are numerous functions in the C API which take mutable pointers to objects where there is
   no intention to actually mutate those objects. Patches have been sent in to the PA project to
   correct many of these cases. There is no point in waiting for those to be accepted, so the
   change has been reflected in the C API description in the sys crate.
